# AprilTagCar

./: CMakeLists.txt  apriltag_car.cpp  apriltag_record.txt  apriltag_test.kdev4  blog.txt  note.txt  opencv_demo.cpp  test_lib.cpp
.kdev4/: apriltag_test.kdev4
lib/: CMakeLists.txt  camera.cpp  camera.h  car_control.cpp  car_control.h  common_param.h  id_translate.cpp  id_translate.h  tag_detect.cpp  tag_detect.h  user_interface.cpp  user_interface.h
